--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.2",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-server": "^2.18.1",
     "graphql": "^15.3.0",
+    "lodash": "^4.17.20",
     "mongodb": "^3.6.2",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
